5.allow-egress.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-egress
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - swiggy
          - zomato
          - zoom
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            project: test
        podSelector:
          matchLabels:
            app: nginx

      ports:
        - port: 80
